Dockerfile: remove bootstrap call
* Refactors last Dockerfile in the image building sequence to just
  copy the updated instance directory and run pip install, instead
  of running the bootstrap script again.

Signed-off-by: Dinos Kousidis <dinos.kousidis@cern.ch>

--- a/{{cookiecutter.project_shortname}}/Dockerfile
+++ b/{{cookiecutter.project_shortname}}/Dockerfile
@@ -2,8 +2,5 @@
 FROM {{cookiecutter.project_shortname}}-base:latest
 
 COPY ./ .
-COPY ./docker/uwsgi/ ${INVENIO_INSTANCE_PATH}
 
-RUN ./scripts/bootstrap
-
-USER ${INVENIO_USER_ID}
+RUN pip install --user .
