--- a/{{cookiecutter.project_shortname}}/Dockerfile.base
+++ b/{{cookiecutter.project_shortname}}/Dockerfile.base
@@ -4,4 +4,4 @@ FROM inveniosoftware/centos7-python:3.6
 COPY ./ .
 COPY ./docker/uwsgi/ ${INVENIO_INSTANCE_PATH}
 
-RUN ./scripts/bootstrap --deploy
+RUN ./scripts/bootstrap --deploy --dev --skip-lock --pre
